# freyja

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  LICENSE  MIGRATION.md  MODGUD_OPTIMIZATION_REPORT.md  README.md  REFACTORING_PLAN.md  analyze_dependencies.py  clean.sh  cls_example.py  command_discovery2.py  debug_system.py  deploy.sh  docplan.md  environment.yml  examples.py  freyja_dependencies.json  lint-errors.txt  mod_example.py  modgud-pr-v1.md  multi_class_example.py  mypy.toml  pyproject.toml  pytest.ini.not  remediation-plan-phased.md  ruff.toml  setup.py  system_example.py  test_api_functionality.py  test_output_capture_execution.py  test_output_capture_integration.py  test_simple_capture.py  text_util.py  the-differences.md
auto_cli/: __init__.py  ansi_string.py  argument_parser.py  cli.py  command_builder.py  command_discovery.py  command_executor.py  command_parser.py  docstring_parser.py  enums.py  formatter.py  formatting_engine.py  help_formatter.py  help_formatter_refactored.py  help_formatting_engine.py  math_utils.py  multi_class_handler.py  nn.py  str_utils.py  string_utils.py  system.py  theme.py  validation.py
auto_cli/command/: argument_parser.py  cli_execution_coordinator.py  cli_target_analyzer.py  command_builder.py  command_discovery.py  command_parser.py  multi_class_handler.py  system.py
auto_cli/completion/: __init__.py  base.py  bash.py  fish.py  installer.py  powershell.py  zsh.py
auto_cli/help/: __init__.py  help_formatter.py  help_formatting_engine.py
auto_cli/theme/: __init__.py  color_formatter.py  color_utils.py  enums.py  rgb.py  theme.py  theme_style.py  theme_tuner.py  themes.py
auto_cli/utils/: ansi_string.py  math_utils.py
backups/: setup.py
docs/: README.md  api-docs.md  architecture-diagram.xml  class-cli-guide.md  faq.md  help.md  how-it-works.md  module-cli-guide.md
docs/advanced/: README.md  index.md
docs/development/: README.md  contributing.md  index.md  submodules.md
docs/features/: README.md  cli-generation.md  error-handling.md  execution-spinner.md  flexible-ordering.md  guards.md  index.md  output-capture.md  positional-parameters.md  shell-completion.md  themes.md  type-annotations.md
docs/getting-started/: README.md  basic-usage.md  choosing-cli-mode.md  class-cli.md  index.md  installation.md  module-cli.md  quick-start.md
docs/guides/: README.md  best-practices.md  examples.md  index.md  module-cli-guide.md  troubleshooting.md
docs/reference/: README.md  api.md  index.md
docs/user-guide/: README.md  class-cli.md  index.md  inner-classes.md  mode-comparison.md  module-cli.md
examples/: cls_example  cls_example.py  mod_example  mod_example.py  multi_class_example.py  system_example  system_example.py
freyja/: __init__.py  cli.py  freyja_cli.py
freyja/cli/: __init__.py  class_handler.py  enums.py  execution_coordinator.py  target_analyzer.py  target_mode_enum.py
freyja/command/: __init__.py  argument_parser.py  class_handler.py  cli_execution_coordinator.py  cli_target_analyzer.py  command_builder.py  command_discovery.py  command_executor.py  command_info.py  command_parser.py  command_tree.py  execution_coordinator.py  multi_class_handler.py  system.py  validation.py  validation_service.py
freyja/completion/: __init__.py  base.py  bash.py  fish.py  installer.py  powershell.py  zsh.py
freyja/enums/: __init__.py  target_info_keys.py
freyja/examples/: cls_example  multi_class_example
freyja/help/: __init__.py  format_patterns.py  help_formatter.py  help_formatting_engine.py
freyja/parser/: __init__.py  argument_parser.py  argument_preprocessor.py  command_parser.py  command_path_resolver.py  docstring_parser.py  option_discovery.py  positional_handler.py
freyja/shared/: __init__.py  command_info.py  command_tree.py
freyja/tests/: __init__.py  conftest.py  test_adjust_strategy.py  test_ansi_string.py  test_cli_class.py  test_cli_module.py  test_cli_target_analyzer.py  test_color_adjustment.py  test_color_formatter_rgb.py  test_command_discovery.py  test_completion.py  test_completion_system_integration.py  test_comprehensive_module_cli.py  test_data_struct_util.py  test_examples.py  test_hierarchical_command_groups.py  test_hierarchical_help_formatter.py  test_multi_class_cli.py  test_rgb.py  test_string_utils.py  test_system.py  test_text_util.py  test_theme_color_adjustment.py
freyja/theme/: __init__.py  adjust_strategy.py  back.py  color_formatter.py  command_style_section.py  defaults.py  enums.py  fore.py  fore_universal.py  rgb.py  style_enum.py  theme.py  theme_style.py
freyja/utils/: __init__.py  ansi_string.py  app_logger.py  cli_guards.py  console_formatter.py  data_struct_util.py  dependency_analyzer.py  guards.py  json_formatter.py  math_util.py  output_capture.py  spinner.py  string_utils.py  text_util.py  version.py
src/: __init__.py  cli.py  validation.py
src/command/: argument_parser.py  cli_execution_coordinator.py  cli_target_analyzer.py  command_builder.py  command_discovery.py  command_parser.py  multi_class_handler.py  system.py
src/completion/: __init__.py  base.py  fish.py
src/enums/: target_info_keys.py  target_mode.py
src/help/: help_formatter.py
src/theme/: __init__.py  rgb.py
src/utils/: __init__.py  string_utils.py
tests/: __init__.py  conftest.py  test_adjust_strategy.py  test_ansi_string.py  test_cli.py  test_cli_class.py  test_cli_module.py  test_color_adjustment.py  test_color_formatter_rgb.py  test_completion.py  test_comprehensive_class_cli.py  test_comprehensive_module_cli.py  test_examples.py  test_hierarchical_command_groups.py  test_hierarchical_help_formatter.py  test_hierarchical_subcommands.py  test_multi_class_cli.py  test_rgb.py  test_str_utils.py  test_string_utils.py  test_system.py  test_theme_color_adjustment.py
tests/features/: __init__.py  test_flexible_ordering.py  test_hierarchical_help_formatter.py  test_integration_features.py  test_positional_parameters.py  test_system.py
tests/fixtures/: __init__.py
tests/helpers/: __init__.py  test_cli_helper.py  test_mock_filesystem.py
(+76 files in other folders)
