[project]
name = "freyja"
authors = [{name = "Steven Miers", email = "steven.miers@gmail.com"}]
description = "Python Library that builds a complete CLI given one or more functions using introspection"
keywords = ["cli", "auto", "introspection", "argparse", "command-line"]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
version = "2.0.2" # Uses poetry-dynamic-versioning
requires-python = ">=3.11.0,<4.0.0"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/terracoil/freyja"
Repository = "https://github.com/terracoil/freyja"
Documentation = "https://github.com/terracoil/freyja/tree/main/docs"

[tool.poetry]
include = [
    "LICENSE",
    "README.md",
    "freyja/py.typed"
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/.pytest_cache",
    "**/.mypy_cache"
]
packages = [{include = "freyja"}]

[dependency-groups]
test = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-timeout (>=2.3.1,<3.0.0)",
    "ruff (>=0.14.2,<0.15.0)",
]
dev = [
    { include-group = "test" },
    "mypy[reports] (>=1.18.2,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "poetry-dynamic-versioning (>=1.9.1,<2.0.0)"
]

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.mypy]
python_version = "3.11"
cache_dir = "tmp/.mypy_cache"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, can be tightened later
show_error_codes = true
exclude = [
    "build/",
    "dist/",
]

[tool.pytest.ini_options]
cache_dir = "tmp/.pytest_cache"
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=freyja --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
